Initial Commit, added Alarm class.
First commit, reviewed code.
wrote up comments for certain areas

Added new Alarm.java Class.